argocd-apps/kyv_policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-runasnonroot
      match:
        any:
          - resources:
              kinds: ["Pod"]
      exclude:
        any:
          - resources:
              kinds:
                - Pod
              selector:
                matchLabels:
                  app.kubernetes.io/part-of: chaos-mesh
      validate:
        message: "Containers must run as non-root (securityContext.runAsNonRoot: true)."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
